--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Travelog
-subtitle: "Journal of [name]"
+title: "My fabulously awesome portfolio"
+subtitle: "Journal of kickass designer"
 email: your-email@domain.com
 description: "Make the footer happy by entering a short description about yourself here"
 baseurl: ""
